# backend/model/hotel_facilities.go
@@ -5,5 +5,5 @@ type HotelFacilities struct {
 	HotelID           uint `json:"hotelID" gorm:"foreignKey:HotelID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 	FacilitiesID      uint `json:"facilitiesID" gorm:"foreignKey:FacilitiesID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
 
-	Facilities Facilities `json:"facilities" gorm:"foreignKey:FacilitiesID"`
+	Facilities Facilities `json:"facilities"`
 }
