# backend/route/flight_route.go
@@ -7,6 +7,11 @@ import (
 func FlightRoute(r *gin.Engine) {
 	flight := r.Group("/flight")
 	{
+		//Airline
 		flight.POST("/airline", controller.AddAirline)
+		flight.GET("/airline", controller.GetAirlines)
+
+		//Plane
+		flight.POST("/plane", controller.AddPlane)
 	}
 }
